--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Start here: http://www.aaronland.info/weblog/2010/02/04/cheap/#spacetime
+This document is incomplete.
+
+In the meantime, start here: http://www.aaronland.info/weblog/2010/02/04/cheap/#spacetime
